...
    MenuEditUndo -> "Undo"
    MenuEditRedo -> "Redo"
    MenuEditTools -> "Tools"
    MenuEditToolsCursor -> "Cursor"
    MenuEditToolsScissors -> "Scissors"
    MenuEditToolsPan -> "Pan"
    MenuEditToolsPlayback -> "Playback"
    MenuEditRenameEntry -> "Rename Current Entry..."
    MenuEditDuplicateEntry -> "Duplicate Current Entry..."
    MenuEditRemoveEntry -> "Remove Current Entry..."
    MenuEditMoveEntry -> "Move Current Entry to..."
    MenuEditToggleDone -> "Toggle Done for Current Entry"
    MenuEditToggleStar -> "Toggle Starred for Current Entry"
...
    MenuHelpIncludeInfoLog -> "Enable Detailed Logging"
    MenuHelpOpenHomePage -> "Open vLabeler Home Page"
    MenuHelpOpenLatestRelease -> "Open Latest Release"
    MenuHelpOpenGitHub -> "Open GitHub Page"
    MenuHelpJoinDiscord -> "Join Discord"
    MenuHelpAbout -> "About"
    CommonOkay -> "OK"
    CommonApply -> "Apply"
    CommonCancel -> "Cancel"
    CommonYes -> "Yes"
    CommonNo -> "No"
    CommonWarning -> "Warning"
    CommonError -> "Error"
    CommonDetails -> "Details"
    CommonOthers -> "Others"
    CommonPrevious -> "Previous"
    CommonNext -> "Next"
    CommonFinish -> "Finish"
    CommonSelect -> "Select"
    CommonOpen -> "Open"
    CommonSave -> "Save"
    CommonReset -> "Reset"
    CommonClear -> "Clear"
    CommonInputErrorPromptNumber -> "Please enter a number."
...
    StarterNewProject -> "New Project..."
    StarterOpen -> "Open..."
    StarterQuickEdit -> "Quick Edit"
    StarterRecent -> "Recent"
    StarterRecentEmpty -> "You have no recent projects."
    StarterRecentDeleted -> "This project file has been removed."
    StarterNewSampleDirectory -> "Sample directory"
    StarterNewWorkingDirectory -> "Project location"
    StarterNewProjectTitle -> "New Project"
    StarterNewProjectName -> "Project name"
    StarterNewProjectNameWarning -> "The project file already exists. Creating the project will overwrite the file."
    StarterNewCacheDirectory -> "Cache directory"
    StarterNewLabelerCategory -> "Category"
    StarterNewLabeler -> "Labeler"
    StarterNewTemplatePlugin -> "Template generator"
    StarterNewTemplatePluginNone -> "None"
    StarterNewInputFile -> "Input file (.%s)"
    StarterNewEncoding -> "Encoding"
    StarterNewAutoExport -> "Auto-export"
...
        "You are trying to use a template generator with a labeler that manages multiple subprojects. " +
            "This is dangerous because it may overwrite all your existing label files with the generated entries. " +
            "Please double confirm that the settings meet your needs."
    StarterNewDirectoryPage -> "Directory Settings"
    StarterNewLabelerPage -> "Labeler Settings"
    StarterNewDataSourcePage -> "Data Source Settings"
    StarterNewContentType -> "Create by..."
    StarterNewContentTypeDefault -> "Default"
    StarterNewContentTypeFile -> "File"
    StarterNewContentTypePlugin -> "Template generator"
    StarterNewAdvancedSettings -> "Advanced Settings"
    SampleListIncludedHeader -> "Project sample files"
    SampleListIncludedItemEntryCountSingle -> "%d entry"
    SampleListIncludedItemEntryCountPlural -> "%d entries"
    SampleListExcludedHeader -> "Other sample files"
    SampleListExcludedPlaceholder -> "There are no unreferenced sample files in the sample directory."
    SampleListEntryHeader -> "Entries"
...
    ChooseSampleDirectoryDialogTitle -> "Choose sample directory"
    ChooseWorkingDirectoryDialogTitle -> "Choose project location directory"
    ChooseCacheDirectoryDialogTitle -> "Choose cache directory"
    ChooseInputFileDialogTitle -> "Choose input file"
    OpenProjectDialogTitle -> "Open project"
    SaveAsProjectDialogTitle -> "Save as project"
    ImportDialogTitle -> "Import"
    ExportDialogTitle -> "Export"
    SetResolutionDialogDescription -> "Input canvas resolution (points per pixel) for the editor (%d ~ %d)"
    SetEntryPropertyDialogDescription ->
        "Please enter the value of the property `%s` of this entry. \n" +
            "Please note that your input value will not be restricted, " +
            "so please check the data validity by yourself after this process."
    AskIfSaveBeforeOpenDialogDescription ->
...
    PreferencesEditorImportSuccess -> "Successfully imported preferences."
    PreferencesEditorImportFailure -> "Failed to import the selected preferences file."
    PreferencesEditorExport -> "Export"
    PreferencesEditorExportSuccess -> "Successfully exported preferences."
    PreferencesEditorExportFailure -> "Failed to export preferences to the selected file."
    PreferencesEditorExportDialogTitle -> "Export preferences"
    PreferencesEditorResetPage -> "Reset items in this page"
    PreferencesEditorResetAll -> "Reset all items"
    PreferencesCharts -> "Charts"
    PreferencesChartsDescription -> "Customize the charts being rendered in the editor."
    PreferencesChartsCanvas -> "Canvas"
    PreferencesChartsCanvasDescription -> "Customize general settings about the canvas where the charts are drawn."
    PreferencesChartsCanvasResolution -> "Canvas resolution"
    PreferencesChartsCanvasResolutionDescription ->
...
    PreferencesViewCornerPositionBottomLeft -> "Bottom left"
    PreferencesViewCornerPositionBottomRight -> "Bottom right"
    PreferencesFontSizeSmall -> "Small"
    PreferencesFontSizeMedium -> "Medium"
    PreferencesFontSizeLarge -> "Large"
    PreferencesFontSizeExtraLarge -> "Extra large"
    PreferencesEditor -> "Editor"
    PreferencesEditorDescription -> "Customize the editor's appearance and behavior."
    PreferencesEditorPlayerCursorColor -> "Player cursor color"
    PreferencesEditorEntryNamePresets -> "Entry name presets"
    PreferencesEditorEntryNamePresetsDescription ->
        "Preset entry names that can be quickly applied in the dialogs where you input an entry name, e.g. when " +
            "renaming or cutting an entry."
...
    PreferencesAutoReloadDescription -> "Customize the behavior about auto-reloading label files when they are changed."
    PreferencesAutoReloadBehavior -> "Behavior"
    PreferencesAutoReloadBehaviorDisabled -> "Disabled"
    PreferencesAutoReloadBehaviorAskWithDetails -> "Ask with details"
    PreferencesAutoReloadBehaviorAsk -> "Ask Yes/No"
    PreferencesAutoReloadBehaviorAuto -> "Auto"
    PreferencesHistory -> "Edit history"
    PreferencesHistoryDescription -> "Customize the behavior about edit history (undo/redo)."
    PreferencesHistoryMaxSize -> "Maximum retained size"
    PreferencesHistorySquashIndex -> "Squash index changes"
    PreferencesHistorySquashIndexDescription ->
        "When enabled, index changes (e.g. switch entries) will not be saved " +
            "until the next content change."
    PreferencesMisc -> "Miscellaneous"
    PreferencesMiscDescription -> "Customize other behaviors. Please note that these settings may be experimental."
    PreferencesMiscUpdateChannel -> "Update channel"
...
