...
        if (parent != workingDirectory && File(parent).exists().not()) return false
        return file.name.isValidFileName()
    }
    /* endregion */

    /* region Labeler Page */
    private val builtInCategoryTags = listOf("UTAU", "NNSVS", "LAB")
    val labelerCategories = labelerConfs.asSequence()
        .map { it.categoryTag }
        .distinct()
        .sortedWith { o1, o2 ->
            if (o1 == "") {
                return@sortedWith 1
...
